--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1807,6 +1807,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-graph { border: none;  border-radius: 10px;}
 .card-progress { border: none;  border-radius: 10px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month .fc-multimonth-header table thead tr th { border: none;}
+.card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td.fc-day-disabled { background: none;}
 
 
 .card-progress .card-body {padding: 30px;}
