--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1606,8 +1606,8 @@ section.post-section .post-container .post-item .post-content{
 .sidebar-content::-webkit-scrollbar {display: none;}
 .sidebar-content ul li.side-item{margin: 0 0 2px;}
 .sidebar-content ul li.side-item a {padding: 10px 30px;display: flex;align-items: center;color: #000;cursor: pointer;position: relative;border-radius: 0; border: 1px solid transparent;}
-.sidebar-content ul li.side-item a:hover {background: #EFEFEF;color: #000;  border: 1px solid #dadada;}
-.sidebar-content ul li.side-item.active a {background: #000;color: #fff;}
+.sidebar-content ul li.side-item a:hover {background: #EFEFEF;color: #FFCD56;  border: 1px solid #dadada;}
+.sidebar-content ul li.side-item.active a {background: #EFEFEF;color: #FFCD56;  border: 1px solid #dadada;}
 .sidebar-content ul li.side-item.logout {padding: 25px 0 0 0;position: relative;}
 .sidebar-content ul li.side-item a.log-out {color: #ec5e5e;}
 .sidebar-content ul li.side-item.logout:after {content: "";position: absolute;width: 60%;background: rgb(30 30 30 / 10%);height: 1px;top: 15px;}
