--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1816,8 +1816,9 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-progress .card-body  .session-text { text-align: center; font-size: 18px; font-weight: 400; margin: 5px 0 0; }
 .card-progress .card-body .session-chart .donut-inner { text-align: center; margin: 10px 0 0; font-size: 18px; font-weight: 400;}
 .card-graph .overview-graph-footer .graph-filter { width: 100%; padding: 0 0 0 30px;}
-.card-graph .overview-graph-footer .graph-filter .graph-filter-btn { margin: 0 8% 0 0 !important;  font-size: 18px; color: #FFCD56; cursor: pointer;}
-.card-graph .overview-graph-footer .graph-filter .graph-filter-btn:hover {color: #212121;}
+.card-graph .overview-graph-footer .graph-filter .graph-filter-btn { margin: 0 8% 0 0 !important;  font-size: 18px; color: #121212; cursor: pointer;}
+.card-graph .overview-graph-footer .graph-filter .graph-filter-btn:hover {color: #FFCD56;}
+.card-graph .overview-graph-footer .graph-filter .graph-filter-btn.active {color: #FFCD56;}
 .card-graph h3 { font-size: 20px; color: #000000; font-weight: 700;  margin: 0 0 26px;}
 
 .card-calendar .card-body .calendar .calendar-footer { width: 100%; display: inline-block;}
