--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -401,6 +401,16 @@ footer .footer-row1 p { font-size: 16px; color: #fff; font-weight: 500;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check:last-child { margin-right: 0;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check input {position: absolute;right: 0;top: 0;-webkit-appearance: none;border-radius: 3px;background: none;border: 2px solid #FFCD56;box-shadow: none;}
 #tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .form-group .form-check input:checked {background: url(../images/checkyellow.svg) no-repeat center / 20px;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group { margin: 0 0 30px;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group .input-group input { height: 52px; padding: 14px;  border: 1px solid #A6A6A6;  color: #A6A6A6;  border-radius: 3px 0 0 3px;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group .input-group button { width: 135px; color: #000; font-weight: 600; border-radius: 0 3px 3px 0;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group .input-group button:hover {background: #000;color: #fff;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group button.btn.btn-secondary { width: 48%; padding: 13px;  font-size: 16px; background: #000; border: 1px solid #000; margin: 0 3% 0 0;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group.mt-2 { margin: 0 0 0;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group button.btn.btn-secondary:hover { background: none; color: #000; border-color: #A6A6A6;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group button.btn-dark { width: 48%; padding: 13px; font-size: 16px; color: #000; background: none; border: 1px solid #A6A6A6; font-weight: 600;}
+#tabs2-cortext-subscription-payment-modal .modal-dialog .modal-content .modal-body .tabs2 .form-group button.btn-dark:hover { background: #000; color: #fff;}
+
 
 
 @media screen and (min-width:1500px){
