--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1696,14 +1696,15 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 
 
 .confirm-modal .modal-content { padding: 10px; border-radius: 10px;}
-.confirm-modal .modal-content .modal-header {padding-bottom: 0; border: none;}
+.confirm-modal .modal-content .modal-header {padding-bottom: 0; border: none; justify-content: center;}
 .confirm-modal .modal-content p { font-size: 16px; line-height: 1.5; margin: 0 0 20px;}
 .confirm-modal .modal-dialog { max-width: 425px; top: 42%; transform: translateY(-50%);}
-.confirm-modal .modal-content .modal-header h5 { font-size: 20px; font-weight: 500;}
+.confirm-modal .modal-content .modal-header h5 { font-size: 20px; font-weight: 500; color: #218df8;}
 .confirm-modal .modal-content .modal-body .btn.btn-dark {width: 48%;  margin-right: 2%;}
 .confirm-modal .modal-content .modal-body .btn.btn-secondary { width: 48%; border: 1px solid #8F8F8F; background: none; color: #000000;}
 .confirm-modal .modal-content .modal-body .btn.btn-dark:hover { background: none; color: #000;}
 .confirm-modal .modal-content .modal-body .btn.btn-secondary:hover { background: #8F8F8F; color: #fff;}
+.confirm-modal .modal-content .modal-header button.close { background: none; color: #000; width: auto; height: auto; font-size: 40px; font-weight: 300; position: absolute;  right: 15px; top: 0;}
 
 
 .exam-container .container-wrap .lesson .lesson-body .mcq-container .image-area {max-width: 300px; width: 100%;  margin: 0 0 26px;}
